--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -14,9 +14,23 @@ steps:
       yum autoremove python2-winrm.noarch
       pip3 install "pywinrm>=0.2.2"
   displayName: 'Install winrm module'
+#- task: Ansible@0
+#  inputs:
+#    ansibleInterface: 'agentMachine'
+#    playbookPathOnAgentMachine: '
 - task: Ansible@0
   inputs:
     ansibleInterface: 'agentMachine'
     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/playbook1.yml'
+    inventoriesAgentMachine: 'inlineContent'
+    inventoryInlineContentAgentMachine: |
+      [windows2019]
+      windows2019 ansible_host=20.4.1.2 
+      ansible_user=Admin5d29d50f69 
+      ansible_password=mAb@*=WOJ0jY*=VDu@5Gjr8=*1ym5B*w!
+      ansible_port=5986 
+      ansible_connection=winrm 
+      ansible_winrm_transport=basic
+      ansible_winrm_server_cert_validation=ignore'
     inventoriesAgentMachine: 'file'
     inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/inventory'  
