--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -25,4 +25,5 @@ steps:
       ansible_user=Admin5d29d50f69 
       ansible_password=mAb@*=WOJ0jY*=VDu@5Gjr8=*1ym5B*w! 
       ansible_connection=winrm 
+      ansible_port=52050
       ansible_winrm_transport=basic
