--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -21,9 +21,8 @@ steps:
     inventoriesAgentMachine: 'inlineContent'
     inventoryInlineContentAgentMachine: |
       [win]
-      windows2019 ansible_host=20.4.1.2 
+      windows2019 ansible_host=https://apsiaem01dev.westeurope.cloudapp.azure.com:52050
       ansible_user=Admin5d29d50f69 
       ansible_password=mAb@*=WOJ0jY*=VDu@5Gjr8=*1ym5B*w! 
       ansible_connection=winrm 
-      ansible_port=52050
       ansible_winrm_transport=basic
