--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -23,6 +23,7 @@ steps:
       [win]
       windows2019 ansible_host=20.4.1.2
       ansible_user=Admin5d29d50f69 
+      ansible_timeout=200
       ansible_password=mAb@*=WOJ0jY*=VDu@5Gjr8=*1ym5B*w! 
       ansible_port=52150
       ansible_connection=winrm 
