--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -11,12 +11,13 @@ steps:
     playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/playbook1.yml'
     inventoriesAgentMachine: 'inlineContent'
     inventoryInlineContentAgentMachine: |
-      [win]
-      windows2019 ansible_host=20.4.1.2
-      ansible_user=Admin5d29d50f69 
-      ansible_timeout=200
-      ansible_password=mAb@*=WOJ0jY*=VDu@5Gjr8=*1ym5B*w! 
-      ansible_port=52150
-      ansible_connection=winrm 
-      ansible_winrm_transport=basic
-      ansible_winrm_server_cert_validation=ignore
+    [windows]
+    windows10 ansible_host=20.4.1.2 
+    [windows:vars]
+    ansible_user=Admin5d29d50f69 
+    ansible_password=mAb@*=WOJ0jY*=VDu@5Gjr8=*1ym5B*w! 
+    ansible_port=52150
+    ansible_connection=winrm 
+    ansible_winrm_transport=basic
+    ansible_winrm_server_cert_validation=ignore
+      
