Update set_up_envs_ansible.yml for Azure Pipelines

--- a/set_up_envs_ansible.yml
+++ b/set_up_envs_ansible.yml
@@ -20,7 +20,7 @@ stages:
       inputs:
         azureSubscription: $(azure_subscription)
         ScriptType: 'FilePath'
-        ScriptPath: $(set_azure_In_nsg_rule_script)
+        ScriptPath: $(System.DefaultWorkingDirectory)/set_azure_In_nsg_rule_script)
         ScriptArguments: -resourceGroupName $(VmA_resourceGroupName) -networkSecurityGroupName $(VmA_nsg_name) -ruleName $(rule_name) -destinationPort $(destination_port)
         azurePowerShellVersion: LatestVersion
     - task: AzurePowerShell@5
@@ -28,7 +28,7 @@ stages:
       inputs:
         azureSubscription: $(azure_subscription)
         ScriptType: 'FilePath'
-        ScriptPath: $(set_azure_In_nsg_rule_script)
+        ScriptPath: $(System.DefaultWorkingDirectory)/set_azure_In_nsg_rule_script)
         ScriptArguments: -resourceGroupName $(VmB_resourceGroupName) -networkSecurityGroupName $(VmB_nsg_name) -ruleName $(rule_name) -destinationPort $(destination_port)
         azurePowerShellVersion: LatestVersion
 # This stage checks if NuGet, df365.tools are installed and the needed packages as d365sqlpackage and d365AzCopy. Also sets winRM for ansible to reach hosts
