--- a/set_up_envs_ansible.yml
+++ b/set_up_envs_ansible.yml
@@ -21,7 +21,7 @@ stages:
         azureSubscription: $(VmA_azure_subscription)
         ScriptType: 'FilePath'
         ScriptPath: $(set_azure_In_nsg_rule_script)
-        ScriptArguments: -resourceGroupName $(VmA_resourceGroupName) -networkSecurityGroupName $(VmA_nsg_name) -ruleName $(rule_name) -destinationPort $(destination_port) -protocol "Tcp"
+        ScriptArguments: -resourceGroupName $(VmA_resourceGroupName) -networkSecurityGroupName $(VmA_nsg_name) -ruleName $(rule_name) -destinationPort $(destination_port)
         azurePowerShellVersion: LatestVersion
     - task: AzurePowerShell@5
       displayName: Setting azure nsg for VmB
@@ -29,7 +29,7 @@ stages:
         azureSubscription: $(VmB_azure_subscription)
         ScriptType: 'FilePath'
         ScriptPath: $(set_azure_In_nsg_rule_script)
-        ScriptArguments: -resourceGroupName $(VmB_resourceGroupName) -networkSecurityGroupName $(VmB_nsg_name) -ruleName $(rule_name) -destinationPort $(destination_port) -protocol "Tcp"
+        ScriptArguments: -resourceGroupName $(VmB_resourceGroupName) -networkSecurityGroupName $(VmB_nsg_name) -ruleName $(rule_name) -destinationPort $(destination_port)
         azurePowerShellVersion: LatestVersion
 # This stage checks if NuGet, df365.tools are installed and the needed packages as d365sqlpackage and d365AzCopy. Also sets winRM for ansible to reach hosts
 - stage: Set_environments
