--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -22,17 +22,13 @@ stages:
           #Install WinRM module for python in controller ubuntu
           python3 -m pip install --user ansible
           pip install pywinrm
-
-- stage: VmA_export_dbhh
-  jobs:
-  - job: export_db
-    timeoutInMinutes: 350
-    steps:
     - task: Ansible@0
       inputs:
         ansibleInterface: 'agentMachine'
         playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/playbook1.yml'
         inventoriesAgentMachine: 'file'
         inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/inventory'
+        extraVars: '-e script1_path=$(script1_path)'' 
+    
 
       
