--- a/ansible_db_env_management_scripts/playbook1.yml
+++ b/ansible_db_env_management_scripts/playbook1.yml
@@ -1,7 +1,6 @@
 - name: Export and upload database from VmA
   hosts: windows
-  become: yes
-  become_method: runas
+  become: false
   tasks:
   - name: Upload db
     win_shell: powershell.exe -File script1_path
