--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -28,5 +28,5 @@ stages:
         playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/playbook1.yml'
         inventoriesAgentMachine: 'file'
         inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/inventory'
-        args: --extra-vars='{"upload_db_script":"$(script_upload_db)", "extract_db_path":"$(extract_db_path)", "db_name":"$(db_name)", "blob_url":"$(blob_url)"}'
+        args: --extra-vars='{"upload_db_script":"$(System.DefaultWorkingDirectory)/$(script_upload_db)", "extract_db_path":"$(extract_db_path)", "db_name":"$(db_name)", "blob_url":"$(blob_url)"}'
       
