--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -16,7 +16,7 @@ stages:
   - job: export_db
     timeoutInMinutes: 350
     steps:
-    - checkout: MyGitHubRepo 
+    - checkout: self
     - task: CmdLine@2
       inputs:
         script: |
@@ -29,5 +29,5 @@ stages:
         playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/playbook1.yml'
         inventoriesAgentMachine: 'file'
         inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/inventory'
-        args: --extra-vars='{"upload_db_script":"$(System.DefaultWorkingDirectory)/.git/$(script_upload_db)", "extract_db_path":"$(extract_db_path)", "db_name":"$(db_name)", "blob_url":"$(blob_url)"}'
+        args: --extra-vars='{"upload_db_script":"$(script_upload_db)", "extract_db_path":"$(extract_db_path)", "db_name":"$(db_name)", "blob_url":"$(blob_url)"}'
       
