--- a/ansible_db_env_management_scripts/playbook1.yml
+++ b/ansible_db_env_management_scripts/playbook1.yml
@@ -6,7 +6,7 @@
   - name: Copy script to target VM
     win_copy:
       src: "{{upload_db_script}}"
-      dest: "C:/temp/{{upload_db_script}}"
+      dest: "C:/temp/upload_db.ps1"
   - name: Upload db
-    win_shell: powershell.exe -File C:/{{upload_db_script}} {{ extract_db_path }} {{ db_name }} '{{ blob_url }}'
+    win_shell: powershell.exe -File C:/temp/upload_db.ps1 {{ extract_db_path }} {{ db_name }} '{{ blob_url }}'
     
