--- a/ansible_db_env_management_scripts/playbook1.yml
+++ b/ansible_db_env_management_scripts/playbook1.yml
@@ -4,6 +4,8 @@
   gather_facts: false
   tasks:
   - name: Copy script to target VM
+    debug:
+      var: blob_url
     win_copy:
       src: "{{upload_db_script}}"
       dest: "C:/temp/upload_db.ps1"
