--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -30,6 +30,6 @@ stages:
         playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/playbook1.yml'
         inventoriesAgentMachine: 'file'
         inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/inventory'
-        args: -vvv --extra-vars "upload_db_script='$(System.DefaultWorkingDirectory)/db_env_managment_scripts/upload_db.ps1', extract_db_path='$(extract_db_path)', db_name='$(db_name)', blob_url='$(blob_url)'"
+        args: -vvv --extra-vars "upload_db_script=$(System.DefaultWorkingDirectory)/db_env_managment_scripts/upload_db.ps1, extract_db_path=$(extract_db_path), db_name=$(db_name), blob_url='$(blob_url)'"
     
       
