--- a/ansible_db_env_management_scripts/playbook1.yml
+++ b/ansible_db_env_management_scripts/playbook1.yml
@@ -8,5 +8,5 @@
       src: "{{ upload_db_script }}"
       dest: C:/Temp/upload_db.ps1
   - name: Upload db
-    win_shell: powershell.exe -File "C:/Temp/upload_db.ps1" "C:/Bacpacs/db_dev_1.bacpac" {{ blob_url }}
+    win_shell: powershell.exe -File C:/Temp/upload_db.ps1 C:/Bacpacs/db_dev_1.bacpac {{ blob_url }}
     
