--- a/ansible_db_env_management_scripts/playbook1.yml
+++ b/ansible_db_env_management_scripts/playbook1.yml
@@ -6,7 +6,7 @@
   - name: Copy script to target VM
     win_copy:
       src: "{{ upload_db_script }}"
-      dest: C:/Temp/{{ upload_db_script }}/
+      dest: C:/Temp/{{ upload_db_script }}
   - name: Write a message to the output
     debug:
       msg: "{{ blob_url }}"
