--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -31,7 +31,7 @@ stages:
         inventoriesAgentMachine: 'file'
         inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/inventory'
         args: -vvv --extra-vars='
-          script_export_db="$(System.DefaultWorkingDirectory)/(script_export_db)"
+          script_export_db="$(System.DefaultWorkingDirectory)/$(script_export_db)"
           script_upload_db="$(System.DefaultWorkingDirectory)/$(script_upload_db)" 
           extract_db_path="$(extract_db_path)" 
           db_name="$(db_name)" 
