--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -12,7 +12,7 @@ variables:
 stages:   
 - stage: VmA_export_db_and_upload
   jobs:
-  - job: export_db
+  - job: execute_playbook_ops_into_VmA
     timeoutInMinutes: $[variables['jobs_timeout']]
     pool:
       name: Nodepool
@@ -58,7 +58,7 @@ stages:
 
 - stage: VmB_download_and_import_db
   jobs:
-  - job: export_db
+  - job: execute_playbook_ops_into_VmB
     timeoutInMinutes: $[variables['jobs_timeout']]
     pool:
       name: Nodepool
