--- a/user-command.yml
+++ b/user-command.yml
@@ -49,7 +49,24 @@ stages:
         arguments: "${{parameters.test_env_url}} ${{parameters.ticket_id}} ${{parameters.video_or_screenshot}} '$(blob_url)'"
         filePath: 'user_client_scripts/record.ps1'
     - task: PowerShell@2
+      displayName: json create
+      inputs:
+        arguments: -reprostep_file_js "reprosteps.test.js" -ticket_id ${{parameters.ticket_id}}
+        filePath: 'user_client_scripts/reprostep_json_create.ps1'
+    - task: PowerShell@2
       displayName: Uploading ${{parameters.video_or_screenshot}}
       inputs:
         arguments: "${{parameters.ticket_id}} '$(blob_url)'"
         filePath: 'user_client_scripts/upload_file.ps1'
+  - job: job_2
+    timeoutInMinutes: 300
+    pool:
+      name: $(pool)
+      demands:
+        - agent.name -equals ${{parameters.agent_id}}
+    steps:
+    - task: PowerShell@2
+      displayName: Listener time
+      inputs:
+        arguments: -reprostep_file_js "reprosteps.test.js"
+        filePath: 'user_client_scripts/reprostep_file_listener.ps1'
