--- a/user-command.yml
+++ b/user-command.yml
@@ -51,7 +51,7 @@ stages:
     - task: PowerShell@2
       displayName: json create
       inputs:
-        arguments: -reprostep_file_js "reprosteps.test.js" -ticket_id ${{parameters.ticket_id}}
+        arguments: -file "reprosteps.test.js" -ticket_id ${{parameters.ticket_id}}
         filePath: 'user_client_scripts/reprostep_json_create.ps1'
     - task: PowerShell@2
       displayName: Uploading ${{parameters.video_or_screenshot}}
@@ -68,5 +68,5 @@ stages:
     - task: PowerShell@2
       displayName: Listener time
       inputs:
-        arguments: -reprostep_file_js "reprosteps.js"
+        arguments: -file "reprosteps.step.js"
         filePath: 'user_client_scripts/reprostep_file_listener.ps1'
