--- a/user-command.yml
+++ b/user-command.yml
@@ -70,3 +70,7 @@ stages:
       inputs:
         arguments: -file "reprosteps.step.js"
         filePath: 'user_client_scripts/reprostep_file_listener.ps1'
+  strategy:
+    parallel:
+      followDependencies: false
+      maxParallel: 2  
