--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -39,7 +39,12 @@ stages:
           script_upload_db="$(System.DefaultWorkingDirectory)/$(script_upload_db)" 
           extract_db_path="$(extract_db_path)" 
           db_name="$(db_name)" 
-          blob_url="$(blob_url)"'
+          blob_url="$(blob_url)"
+          VmA_ansible_host = ""
+          VmA_ansible_user = ""
+          VmA_ansible_password = ""
+          VmA_ansible_port = ""
+          '
 
 - stage: VmB_start
   jobs:
