--- a/ansible_db_env_management_scripts/VmA_ops.yml
+++ b/ansible_db_env_management_scripts/VmA_ops.yml
@@ -1,5 +1,5 @@
 - name: Export and upload database from VmA
-  hosts: windows
+  hosts: VmA_windows
   become: false
   gather_facts: false
   tasks:
