--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -40,10 +40,10 @@ stages:
           extract_db_path="$(extract_db_path)" 
           db_name="$(db_name)" 
           blob_url="$(blob_url)"
-          VmA_ansible_host = ""
-          VmA_ansible_user = ""
-          VmA_ansible_password = ""
-          VmA_ansible_port = ""
+          VmA_ansible_host = "$(VmA_ansible_host)"
+          VmA_ansible_user = "$(VmA_ansible_user)"
+          VmA_ansible_password = "$(VmA_ansible_password)"
+          VmA_ansible_port = "$(VmA_ansible_port)"
           '
 
 - stage: VmB_start
@@ -85,6 +85,7 @@ stages:
         playbookPathOnAgentMachine: '$(System.DefaultWorkingDirectory)/$(playbook_VmB_ops)'
         inventoriesAgentMachine: 'file'
         inventoryFileOnAgentMachine: '$(System.DefaultWorkingDirectory)/$(inventory_ansible)'
+        failOnStdErr: false
         args: -vvv --extra-vars='
           script_download_db="$(System.DefaultWorkingDirectory)/$(script_download_db)"
           script_import_db="$(System.DefaultWorkingDirectory)/$(script_import_db)"
@@ -96,4 +97,8 @@ stages:
           sql_db_name="$(sql_db_name)"
           db_backup_d365fo_name="$(db_backup_d365fo_name)"
           db_d365fo_name="$(db_d365fo_name)"
+          VmB_ansible_host = "$(VmB_ansible_host)"
+          VmB_ansible_user = "$(VmB_ansible_user)"
+          VmB_ansible_password = "$(VmB_ansible_password)"
+          VmB_ansible_port = "$(VmB_ansible_port)"
           '
